* cookie expiration & current track
- vote cookies last an hour now (a day previously)
- the current track div has a greyish backgorund now.

--- a/Democrify/resources/stylesheets/app.css
+++ b/Democrify/resources/stylesheets/app.css
@@ -38,6 +38,11 @@
     position: relative;
 }
 
+.current {
+    background-color: #C1C1C1;
+    z-index: -1;
+}
+
 
 /* -----------------------------------------
    Page Name 1
