* made current track clickable
This is a Spotify URI, which on most devices causes Spotify to open
when clicked.

--- a/Democrify/resources/stylesheets/app.css
+++ b/Democrify/resources/stylesheets/app.css
@@ -51,6 +51,11 @@
   color: white;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /* -----------------------------------------
    Page Name 1
 ----------------------------------------- */
