--- a/Democrify/en.lproj/MainMenu.xib
+++ b/Democrify/en.lproj/MainMenu.xib
@@ -1525,7 +1525,7 @@
 					<string key="NSFrameSize">{562, 152}</string>
 					<reference key="NSNextKeyView" ref="89654965"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1680, 1028}}</string>
+				<string key="NSScreenRect">{{0, 0}, {2560, 1440}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">NO</bool>
 			</object>
@@ -1587,6 +1587,14 @@
 								</object>
 							</array>
 						</object>
+					</object>
+					<object class="NSMenuItem" id="956266792">
+						<reference key="NSMenu" ref="661934826"/>
+						<string key="NSTitle">Reload playlist</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="35465992"/>
+						<reference key="NSMixedImage" ref="502551668"/>
 					</object>
 					<object class="NSMenuItem" id="35525056">
 						<reference key="NSMenu" ref="661934826"/>
@@ -1686,6 +1694,30 @@
 						<reference key="NSMixedImage" ref="502551668"/>
 					</object>
 				</array>
+			</object>
+			<object class="NSButton" id="670000143">
+				<reference key="NSNextResponder"/>
+				<int key="NSvFlags">268</int>
+				<string key="NSFrameSize">{82, 32}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<bool key="NSEnabled">YES</bool>
+				<object class="NSButtonCell" key="NSCell" id="408587120">
+					<int key="NSCellFlags">67108864</int>
+					<int key="NSCellFlags2">134217728</int>
+					<string key="NSContents">Button</string>
+					<reference key="NSSupport" ref="1049301768"/>
+					<string key="NSCellIdentifier">_NS:9</string>
+					<reference key="NSControlView" ref="670000143"/>
+					<int key="NSButtonFlags">-2038284288</int>
+					<int key="NSButtonFlags2">129</int>
+					<string key="NSAlternateContents"/>
+					<string key="NSKeyEquivalent"/>
+					<int key="NSPeriodicDelay">200</int>
+					<int key="NSPeriodicInterval">25</int>
+				</object>
+				<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -2489,6 +2521,14 @@
 						<reference key="destination" ref="98837300"/>
 					</object>
 					<int key="connectionID">672</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">reloadPlaylists:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="956266792"/>
+					</object>
+					<int key="connectionID">677</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -4022,6 +4062,7 @@
 							<reference ref="722011397"/>
 							<reference ref="605297374"/>
 							<reference ref="98837300"/>
+							<reference ref="956266792"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -4244,6 +4285,24 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">671</int>
 						<reference key="object" ref="98837300"/>
+						<reference key="parent" ref="661934826"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">673</int>
+						<reference key="object" ref="670000143"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="408587120"/>
+						</array>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">674</int>
+						<reference key="object" ref="408587120"/>
+						<reference key="parent" ref="670000143"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">676</int>
+						<reference key="object" ref="956266792"/>
 						<reference key="parent" ref="661934826"/>
 					</object>
 				</array>
@@ -4498,6 +4557,9 @@
 				<string key="669.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="670.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="671.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="673.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="674.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="676.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="74.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4514,7 +4576,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">672</int>
+			<int key="maxID">677</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4524,10 +4586,12 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="adminUI:">id</string>
 						<string key="emptyQueue:">id</string>
+						<string key="ibShuffleQueue:">id</string>
 						<string key="login:">id</string>
 						<string key="pauseButton:">id</string>
 						<string key="playButton:">id</string>
 						<string key="quitFromAction:">id</string>
+						<string key="reloadPlaylists:">id</string>
 						<string key="skipTrack:">id</string>
 						<string key="userUI:">id</string>
 					</dictionary>
@@ -4538,6 +4602,10 @@
 						</object>
 						<object class="IBActionInfo" key="emptyQueue:">
 							<string key="name">emptyQueue:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="ibShuffleQueue:">
+							<string key="name">ibShuffleQueue:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="login:">
@@ -4554,6 +4622,10 @@
 						</object>
 						<object class="IBActionInfo" key="quitFromAction:">
 							<string key="name">quitFromAction:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="reloadPlaylists:">
+							<string key="name">reloadPlaylists:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="skipTrack:">
